# specrider

./: .gitignore  CCLA.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  NOTICE  README.md  TRADEMARKS.md  biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts  vitest.config.ts  vitest.coverage.components.config.ts  vitest.coverage.shared.ts  vitest.coverage.utilities.config.ts
.github/: dependabot.yml
.github/scripts/: cla-records.sh
.github/workflows/: ci.yml  cla.yml  dco.yml
docker/: linux-release.Dockerfile
docs/guides/: hotkeys.md  testing.md  theming.md
scripts/: build-linux-docker.sh  build-update-manifest.sh  bump-version.sh  notarize-dmg.sh  perf-fixture.sh  release.sh  updater-smoke.sh
src/: App.tsx  MainWindow.tsx  grouping.ts  main.tsx  styles.css  types.ts  vite-env.d.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json  updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_icon.rs  commands.rs  config.rs  diagnostics.rs  doc_ops.rs  fonts.rs  git_actions.rs  git_diff.rs  git_runner.rs  gtk_menu_theme.rs  images.rs  lib.rs  main.rs  pins.rs  search.rs  state.rs  terminal.rs  watcher.rs  win_dark_mode.rs  workspace_trust.rs
src-tauri/src/collab/: mod.rs  workspace_config.rs  workspace_config.schema.json
src/app/: useAppCommands.test.tsx  useAppCommands.ts  useOutlineState.ts  usePaneLayout.test.tsx  usePaneLayout.ts  usePlanWorkspace.test.tsx  usePlanWorkspace.ts  useViewerMutations.ts  windowState.ts
src/components/: BootFallback.tsx  BranchPicker.tsx  CommitDiffBody.test.tsx  CommitDiffBody.tsx  CommitFileList.test.tsx  CommitFileList.tsx  CommitHistoryPane.tsx  CommitHistoryRail.tsx  CommitPanel.tsx  CommitPopover.tsx  CommitRow.tsx  ConflictBanner.tsx  ContextMenu.tsx  DiffExplorerPane.tsx  DiffPopover.tsx  DocumentBrowser.test.tsx  DocumentBrowser.tsx  GitCluster.tsx  GitOverlays.tsx  GitWorkflowSurfaces.test.tsx  HistoryDiffSurfaces.test.tsx  MarkdownEditor.test.tsx  MarkdownEditor.tsx  OutlinePane.test.tsx  OutlinePane.tsx  PullSummaryPopover.tsx  RailGitActions.tsx  Reader.tsx  ReaderSplitSurfaces.test.tsx  SplitView.tsx  TableModal.tsx  TerminalPane.tsx  TerminalSpike.tsx  TerminalSurfaces.test.tsx  TitleBar.tsx  TrustStatusSurfaces.test.tsx  UpdateAvailable.tsx  WelcomeSplash.tsx  WorkspaceConfigPrompt.test.tsx  WorkspaceConfigPrompt.tsx  (+2 more)
src/hooks/: focusRefresh.test.tsx  gitAsyncStale.test.tsx  gitStatusContext.tsx  useBackgroundFetch.ts  useCollapsedSections.ts  useCommitDetail.ts  useCommitGraph.ts  useDebounced.ts  useDiff.test.ts  useDiff.ts  useDraggable.ts  useFocusTrap.ts  useGitBranch.ts  useGitStatus.ts  useHasUncommittedChanges.ts  (+3 more)
tests/: perf.spec.ts
(+112 files in other folders)
