[package]
name = "specrider"
version = "0.1.0"
description = "A workspace for spec-driven development."
authors = ["Jake Johnson"]
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "specrider_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
# Override the default bin name (package.name = "specrider") so the
# dock label during `tauri dev` matches the bundled productName.
name = "SpecRider"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["image-png", "macos-private-api", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
notify = "8"
walkdir = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2.4.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
trash = "5.2.6"
urlencoding = "2.1.3"
portable-pty = "0.9"
base64 = "0.22"
# Diagnostics-only deps: small, well-maintained, no transitive bloat.
# `os_info` reports the human-readable OS version (e.g. "macOS 15.2");
# `sys-locale` reads the user's preferred BCP-47 locale tag.
os_info = { version = "3", default-features = false }
sys-locale = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# GTK 3 binding for the small CssProvider we use to recolor the in-window
# GtkMenuBar to match the app theme. Pinned to the same major Tauri's
# Linux runtime pulls in transitively (see Cargo.lock).
gtk = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
# Win32 bindings for flipping windows between light and dark via
# DwmSetWindowAttribute + the uxtheme.dll ordinal trick. Version pinned
# to one already in Tauri's transitive tree (see Cargo.lock).
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSButton", "NSView", "NSWindow", "NSApplication", "NSImage", "NSWorkspace", "NSResponder"] }
objc2-foundation = { version = "0.3.2", features = ["NSString", "NSURL"] }
objc2 = "0.6"

[dev-dependencies]
tempfile = "3"
